--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Install clang-format
-      run: apt-get install clang-format clang-tidy
+      run: sudo apt-get install clang-format clang-tidy
 
     - name: configure
       run: make init
