Get Sphinx to build documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(Cxxtend
     VERSION 1.0
     LANGUAGES CXX)
 
+set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 file( GLOB_RECURSE SRCS *.cpp *.h )
@@ -35,6 +36,7 @@ if(CLANG_TIDY)
             ${SRCS})
 endif()
 
+
 if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
     message(FATAL_ERROR "In-source builds not allowed. Please make a new
     directory (called a build directory) and run CMake from there.")
@@ -43,5 +45,6 @@ endif()
 add_subdirectory(source)
 enable_testing()
 add_subdirectory(test)
+add_subdirectory(docs)
 
 add_compile_options($<$<BOOL:${MSVC}:/permissive->)
