--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -8,20 +8,18 @@ on:
 jobs:
   build:
     name: Build and publish documentation
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
 
       - name: Install doxygen
-        run: brew install doxygen
+        run: sudo apt-get install python
 
       - name: Build
-        run: |
-          cmake -Hdocumentation -Bbuild
-          cmake --build build --target GenerateDocs
+        run: make docs
 
       - name: Publish
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/doxygen/html
+          publish_dir: ./build/docs/build
