--- a/.github/workflows/documentation.yaml
+++ b/.github/workflows/documentation.yaml
@@ -2,8 +2,8 @@ name: Documentation
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - 'master'
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Install doxygen
-        run: sudo apt-get install python
+        run: sudo apt-get install python cmake doxygen
 
       - name: Build
         run: make docs
