--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,12 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Install Dependencies
-      run: sudo apt-get install libexpected-dev libgtest-dev libbenchmark-dev cmake clang-tidy clang-format doxygen ninja-build python3 python3-venv && pip install -r requirements.txt
+      run: sudo apt-get install libexpected-dev libgtest-dev libbenchmark-dev cmake clang-tidy clang-format doxygen ninja-build python3 python3-venv
 
     - name: Initialisation
-      run: make init
+      run: |
+        . venv/bin/activate
+        make init
 
     - name: Build Tests
       run: make build-test
