--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,6 +3,7 @@ option(ENABLE_TEST_COVERAGE "Enable test coverage" OFF)
 if(ENABLE_TEST_COVERAGE)
     add_compile_options(-O0 -g -fprofile-arcs -ftest-coverge)
     add_link_options(-fprofile-arcs -ftest-coverage)
+    message(STATUS "Compiling with coverage flags.")
 endif()
 
 add_subdirectory(unit)
