--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 option(ENABLE_TEST_COVERAGE "Enable test coverage" OFF)
 
 if(ENABLE_TEST_COVERAGE)
-    add_compile_options(-O0 -g -fprofile-arcs -ftest-coverge)
+    add_compile_options(-O0 -g -fprofile-arcs -ftest-coverage)
     add_link_options(-fprofile-arcs -ftest-coverage)
     message(STATUS "Compiling with coverage flags.")
 endif()
