--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build
         run: |
-          make docs-init
+          make init docs-init
           . venv/bin/activate
           make docs
 
