--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,5 +52,5 @@ add_compile_options($<$<BOOL:${MSVC}:/permissive->)
 set (EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 add_custom_target(tar ALL COMMAND
-    ${CMAKE_COMMAND} -E tar -P "cfvz" "${PROJECT_NAME}-${PROJECT_VERSION}.tar.gz" "${EXECUTABLE_OUTPUT_PATH}")
+    ${CMAKE_COMMAND} -E tar "cfvzP" "${PROJECT_NAME}-${PROJECT_VERSION}.tar.gz" "${EXECUTABLE_OUTPUT_PATH}")
 add_dependencies(tar cxxtend)
